# legendarr

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
modules/backend/: pyproject.toml
modules/backend/db/migrations/: env.py
modules/backend/db/migrations/versions/: 086206ba585d_baseline_language_profile.py  35527f37e677_add_forced_hearing_impaired_is_default_.py  3605a01d1781_add_ondelete_cascade_set_null_to_movie_.py  39f01288c6ac_add_movie_and_series_tables.py  (+5 more)
modules/backend/src/legendarr_backend/: __main__.py  api.py  bootstrap.py
modules/backend/tests/: conftest.py  test_bootstrap.py
modules/backend/tests/arr_clients/: test_radarr_client.py  test_sonarr_client.py
modules/backend/tests/arr_services/: test_arr_services_router.py  test_manage_arr_service.py  test_path_mapping.py
modules/backend/tests/config/: test_config_file.py
modules/backend/tests/database/: test_database.py
modules/backend/tests/http_client/: test_http_client.py
modules/backend/tests/language_profiles/: test_manage_language_profile.py  test_router.py
modules/backend/tests/logging/: test_setup.py
modules/backend/tests/media_library/: test_jobs.py  test_sync_media_library.py
modules/backend/tests/media_providers/: test_radarr_client.py  test_sonarr_client.py  test_sync_media_library.py
modules/backend/tests/scheduling/: test_retry.py  test_scheduler.py
modules/backend/tests/security/: test_fernet.py  test_secrets.py
modules/backend/tests/shared_kernel/: test_config_file.py  test_database.py  test_http_client.py
modules/backend/tests/subtitle_acquisition/: test_connection_tests.py  test_manage_subtitle_provider.py  test_manage_subtitle_proxy.py  test_models.py  test_subtitle_acquisition_router.py  test_subtitle_proxy_router.py
modules/backend/tests/subtitle_discovery/: test_scan_video_subtitles.py
modules/backend/tests/subtitle_translation/: test_translate_subtitle.py
modules/bootstrap/: pyproject.toml
modules/bootstrap/src/legendarr_bootstrap/: __main__.py  app.py
modules/bootstrap/tests/: conftest.py  test_app.py
modules/web/: pyproject.toml
modules/web/src/legendarr_web/: __main__.py  app.py
modules/web/tests/: conftest.py  test_dashboard.py  test_language_profiles_page.py  test_media_library_page.py  test_movies_page.py  test_settings_page.py  test_system_page.py
modules/web/tests/arr_services/: test_arr_services_page.py
modules/web/tests/dashboard/: test_dashboard.py
modules/web/tests/history/: test_history_page.py
modules/web/tests/language_profiles/: test_settings_page.py
modules/web/tests/media_library/: test_series_page.py
modules/web/tests/subtitle_acquisition/: test_subtitle_providers_page.py
modules/web/tests/subtitle_proxies/: test_subtitle_proxies_page.py
(+139 files in other folders)
