[project]
name = "legendarr-backend"
version = "0.1.0"
description = "Core domain services: Radarr/Sonarr sync, subtitle discovery and translation"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "sqlmodel>=0.0.22",
    "apscheduler>=3.10",
    "alembic>=1.13",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legendarr_backend"]
